fix missing overflow for table contents (#9)

--- a/assets/stylesheets/_screen.scss
+++ b/assets/stylesheets/_screen.scss
@@ -497,6 +497,8 @@ article {
     }
 
     table {
+        display: block;
+        overflow-x: auto;
         width: auto;
         min-width: 68%;
         margin: 2em auto 3em auto;
